# wmrde

./: .gitignore
MATLAB/: CADdir.m  datalogdir.m  genmprim_unicycle_circular_non_uniform.m  genmprim_unicycle_circular_non_uniform_original.m  main.m  run_genprim_test_flat.m
MATLAB/WmrModel/: WmrModel.m
MATLAB/a_star/: %test_simulate.m  main.m
MATLAB/animate/: parseVrml.m
MATLAB/collision/: updateWheelContactGeom.m
MATLAB/contactgeom/: WheelContactGeom.m
MATLAB/demo/model/: ackermanControllerCustom.m  recbot.m  recbotCustom.m
MATLAB/demo/terrain/: custom_terrain.m  randomgrid.m
MATLAB/dynamics/: odeDynCustom.m
MATLAB/surface/: surfacesDz.m
MATLAB/test/: custom_simopts.m  simopts.m  test_simulate.m
include/wmrde/: options.h
include/wmrde/demo/: models.h
src/: CMakeLists.txt  main.cpp
src/surface/: Surface.cpp
